# test_task_sima-land

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
app/: init_db.py  main.py  middlewares.py  routes.py  settings.py
app/dao/: role.py  user.py
app/dao/database/: init_db.py  schemas.py
app/database/: init_db.py
app/services/: auth.py  pas.py  role.py  user.py
app/users/: views.py
app/views/: auth.py  models.py  role.py  user.py
config/: config.yaml
deploy/: config_temp.yaml
